force-app/main/default/objects/VenueType__c/VenueType__c.object-meta.xml
<CustomObject>
    <label>Venue Type</label>
    <pluralLabel>Venue Types</pluralLabel>
    <nameField>
        <label>Venue Type Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>장소 유형 마스터 데이터(레스토랑/웨딩홀/카페/야외). 각 Venue__c가 이 중 하나를 Lookup으로 연결한다.</description>
</CustomObject>