force-app/main/default/objects/VenueType__c/fields/BestFor__c.field-meta.xml
<CustomField>
    <fullName>BestFor__c</fullName>
    <label>추천 대상</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>