force-app/main/default/objects/VenueType__c/fields/Cons__c.field-meta.xml
<CustomField>
    <fullName>Cons__c</fullName>
    <label>단점</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>