force-app/main/default/objects/VenueType__c/fields/Pros__c.field-meta.xml
<CustomField>
    <fullName>Pros__c</fullName>
    <label>장점</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>